[gd_scene load_steps=15 format=3 uid="uid://buc3eqhfknkqg"]

[ext_resource type="Theme" uid="uid://cf25w553mynfo" path="res://theme.tres" id="1_egfyp"]
[ext_resource type="Script" uid="uid://dq05so4e2fnxm" path="res://pages/level_editor/host_edit_panel/host_success_panel.gd" id="1_l7ruu"]
[ext_resource type="Texture2D" uid="uid://d3tjjpdo6y7w" path="res://ui/button_bg.png" id="2_egfyp"]
[ext_resource type="FontFile" uid="uid://dpmyxsdjp8lba" path="res://fonts/quicksand/static/quicksand-medium.ttf" id="4_qksw3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_88cch"]
texture = ExtResource("2_egfyp")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
modulate_color = Color(0.817521, 0.817521, 0.817521, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05tig"]
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j8x7s"]
texture = ExtResource("2_egfyp")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
modulate_color = Color(0.725214, 0.837202, 1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_35taw"]
texture = ExtResource("2_egfyp")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_adoyr"]
texture = ExtResource("2_egfyp")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
modulate_color = Color(0.725214, 0.837202, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyug2"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.498039, 0.498039, 0.498039, 1)
border_blend = true
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3070e"]
bg_color = Color(1, 1, 1, 0.87451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.498039, 0.498039, 0.498039, 0.87451)
corner_radius_top_left = 10
corner_radius_top_right = 10
shadow_color = Color(0, 0, 0, 0.152941)
shadow_size = 1
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1rmny"]
color = Color(0, 0, 0, 0.623529)
grow_begin = -1.0
grow_end = -1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mihib"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.498039, 0.498039, 0.498039, 1)
border_blend = true
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="Theme" id="Theme_y6wvi"]
default_base_scale = 1.0
default_font = ExtResource("4_qksw3")
default_font_size = 24
Button/colors/font_color = Color(0.00392157, 0.00392157, 0.00392157, 1)
Button/colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
Button/colors/font_focus_color = Color(0, 0.210814, 0.489584, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0.211765, 0.490196, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0.211765, 0.490196, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/styles/disabled = SubResource("StyleBoxTexture_88cch")
Button/styles/focus = SubResource("StyleBoxFlat_05tig")
Button/styles/hover = SubResource("StyleBoxTexture_j8x7s")
Button/styles/normal = SubResource("StyleBoxTexture_35taw")
Button/styles/pressed = SubResource("StyleBoxTexture_adoyr")
FlatButton/colors/font_color = Color(0.831373, 0.788235, 0.627451, 1)
FlatButton/colors/font_hover_color = Color(0.129412, 0.172549, 0.243137, 1)
Label/colors/font_color = Color(0, 0, 0, 1)
LineEdit/colors/font_color = Color(0, 0, 0, 1)
LineEdit/colors/selection_color = Color(0, 0, 0, 1)
LineEdit/styles/normal = SubResource("StyleBoxFlat_hyug2")
OptionButton/styles/normal = null
Panel/styles/panel = SubResource("StyleBoxFlat_3070e")
PopupMenu/styles/panel = null
PopupMenu/styles/separator = SubResource("StyleBoxLine_1rmny")
PopupPanel/styles/panel = null
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)
TextEdit/colors/font_color = Color(0, 0, 0, 1)
TextEdit/colors/font_placeholder_color = Color(0.875, 0.875, 0.875, 0.6)
TextEdit/styles/normal = SubResource("StyleBoxFlat_mihib")

[node name="HostSuccessPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = 21.0
offset_right = 46.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_egfyp")
script = ExtResource("1_l7ruu")

[node name="SmallPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 562.0
offset_top = 278.0
offset_right = 1212.0
offset_bottom = 678.0

[node name="VBoxContainer" type="VBoxContainer" parent="SmallPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 52.0
offset_right = 625.0
offset_bottom = 348.0

[node name="HostSuccessLabel" type="Label" parent="SmallPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "-- Room Created! --"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RoomDescription1Label" type="Label" parent="SmallPanel/VBoxContainer"]
custom_minimum_size = Vector2(600, 35)
layout_mode = 2
text = "Congratulations! Your room code is:"
autowrap_mode = 2

[node name="RoomCodeText" type="RichTextLabel" parent="SmallPanel/VBoxContainer"]
custom_minimum_size = Vector2(600, 35)
layout_mode = 2
focus_mode = 2
theme = SubResource("Theme_y6wvi")
text = "[Code goes here]"
selection_enabled = true

[node name="RoomDescription1Label2" type="Label" parent="SmallPanel/VBoxContainer"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
text = "Share this code with your guild, people
you trust, or complete strangers, to start editing your level in real-time!"
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="SmallPanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Close"
